--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,8 @@
     "stdlib.h": "c",
     "stdio.h": "c",
     "signal.h": "c",
-    "wait.h": "c"
+    "wait.h": "c",
+    "unistd.h": "c",
+    "stdint.h": "c"
   }
 }
